EC/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt SEMICOLON stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assign_stmt
Rule 5     stmt -> while_stmt
Rule 6     stmt -> if_stmt
Rule 7     stmt -> class_stmt
Rule 8     expr -> expr PLUS term
Rule 9     expr -> expr MINUS term
Rule 10    expr_list -> expr COMMA expr_list
Rule 11    expr_list -> expr
Rule 12    expr -> term
Rule 13    term -> term TIMES fact
Rule 14    term -> term CONCAT fact
Rule 15    term -> fact
Rule 16    fact -> LPAREN expr RPAREN
Rule 17    fact -> NUMBER
Rule 18    fact -> IDENT
Rule 19    fact -> list
Rule 20    fact -> func_call
Rule 21    fact -> prop_func_call
Rule 22    fact -> proc
Rule 23    assign_stmt -> IDENT ASSIGNOP expr
Rule 24    fact -> property
Rule 25    property -> PROP
Rule 26    while_stmt -> WHILE expr DO stmt_list OD
Rule 27    if_stmt -> IF expr THEN stmt_list ELSE stmt_list FI
Rule 28    proc -> PROC LPAREN param_list RPAREN stmt_list END
Rule 29    proc -> PROC LPAREN RPAREN stmt_list END
Rule 30    class_stmt -> CLASSSYM IDENT LPAREN param_list RPAREN stmt_list END
Rule 31    class_stmt -> CLASSSYM IDENT LPAREN param_list RPAREN SUPER IDENT stmt_list END
Rule 32    class_stmt -> CLASSSYM IDENT LPAREN RPAREN stmt_list END SEMICOLON END
Rule 33    class_stmt -> CLASSSYM IDENT LPAREN RPAREN SUPER IDENT stmt_list END SEMICOLON END
Rule 34    param_list -> IDENT COMMA param_list
Rule 35    param_list -> IDENT
Rule 36    list -> LBRACKET sequence RBRACKET
Rule 37    list -> LBRACKET RBRACKET
Rule 38    sequence -> listelement COMMA sequence
Rule 39    sequence -> listelement
Rule 40    listelement -> list
Rule 41    listelement -> NUMBER
Rule 42    func_call -> IDENT LPAREN RPAREN
Rule 43    func_call -> IDENT LPAREN expr_list RPAREN
Rule 44    prop_func_call -> property LPAREN expr_list RPAREN
Rule 45    prop_func_call -> property LPAREN RPAREN

Terminals, with rules where they appear

ASSIGNOP             : 23
CLASSSYM             : 30 31 32 33
COMMA                : 10 34 38
CONCAT               : 14
DO                   : 26
ELSE                 : 27
END                  : 28 29 30 31 32 32 33 33
FI                   : 27
IDENT                : 18 23 30 31 31 32 33 33 34 35 42 43
IF                   : 27
LBRACKET             : 36 37
LPAREN               : 16 28 29 30 31 32 33 42 43 44 45
MINUS                : 9
NUMBER               : 17 41
OD                   : 26
PLUS                 : 8
PROC                 : 28 29
PROP                 : 25
RBRACKET             : 36 37
RPAREN               : 16 28 29 30 31 32 33 42 43 44 45
SEMICOLON            : 2 32 33
SUPER                : 31 33
THEN                 : 27
TIMES                : 13
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 4
class_stmt           : 7
expr                 : 8 9 10 11 16 23 26 27
expr_list            : 10 43 44
fact                 : 13 14 15
func_call            : 20
if_stmt              : 6
list                 : 19 40
listelement          : 38 39
param_list           : 28 30 31 34
proc                 : 22
program              : 0
prop_func_call       : 21
property             : 24 44 45
sequence             : 36 38
stmt                 : 2 3
stmt_list            : 1 2 26 27 27 28 29 30 31 32 33
term                 : 8 9 12 13 14
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (7) stmt -> . class_stmt
    (23) assign_stmt -> . IDENT ASSIGNOP expr
    (26) while_stmt -> . WHILE expr DO stmt_list OD
    (27) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI
    (30) class_stmt -> . CLASSSYM IDENT LPAREN param_list RPAREN stmt_list END
    (31) class_stmt -> . CLASSSYM IDENT LPAREN param_list RPAREN SUPER IDENT stmt_list END
    (32) class_stmt -> . CLASSSYM IDENT LPAREN RPAREN stmt_list END SEMICOLON END
    (33) class_stmt -> . CLASSSYM IDENT LPAREN RPAREN SUPER IDENT stmt_list END SEMICOLON END

    IDENT           shift and go to state 4
    WHILE           shift and go to state 1
    IF              shift and go to state 6
    CLASSSYM        shift and go to state 11

    stmt_list                      shift and go to state 7
    if_stmt                        shift and go to state 8
    stmt                           shift and go to state 5
    assign_stmt                    shift and go to state 2
    while_stmt                     shift and go to state 9
    program                        shift and go to state 3
    class_stmt                     shift and go to state 10

state 1

    (26) while_stmt -> WHILE . expr DO stmt_list OD
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . term CONCAT fact
    (15) term -> . fact
    (16) fact -> . LPAREN expr RPAREN
    (17) fact -> . NUMBER
    (18) fact -> . IDENT
    (19) fact -> . list
    (20) fact -> . func_call
    (21) fact -> . prop_func_call
    (22) fact -> . proc
    (24) fact -> . property
    (36) list -> . LBRACKET sequence RBRACKET
    (37) list -> . LBRACKET RBRACKET
    (42) func_call -> . IDENT LPAREN RPAREN
    (43) func_call -> . IDENT LPAREN expr_list RPAREN
    (44) prop_func_call -> . property LPAREN expr_list RPAREN
    (45) prop_func_call -> . property LPAREN RPAREN
    (28) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (29) proc -> . PROC LPAREN RPAREN stmt_list END
    (25) property -> . PROP

    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 12
    IDENT           shift and go to state 17
    LBRACKET        shift and go to state 13
    PROC            shift and go to state 24
    PROP            shift and go to state 22

    func_call                      shift and go to state 16
    term                           shift and go to state 19
    prop_func_call                 shift and go to state 14
    expr                           shift and go to state 20
    list                           shift and go to state 21
    property                       shift and go to state 23
    proc                           shift and go to state 15
    fact                           shift and go to state 25

state 2

    (4) stmt -> assign_stmt .

    SEMICOLON       reduce using rule 4 (stmt -> assign_stmt .)
    END             reduce using rule 4 (stmt -> assign_stmt .)
    FI              reduce using rule 4 (stmt -> assign_stmt .)
    OD              reduce using rule 4 (stmt -> assign_stmt .)
    ELSE            reduce using rule 4 (stmt -> assign_stmt .)
    $end            reduce using rule 4 (stmt -> assign_stmt .)


state 3

    (0) S' -> program .



state 4

    (23) assign_stmt -> IDENT . ASSIGNOP expr

    ASSIGNOP        shift and go to state 26


state 5

    (2) stmt_list -> stmt . SEMICOLON stmt_list
    (3) stmt_list -> stmt .

    SEMICOLON       shift and go to state 27
    ELSE            reduce using rule 3 (stmt_list -> stmt .)
    $end            reduce using rule 3 (stmt_list -> stmt .)
    FI              reduce using rule 3 (stmt_list -> stmt .)
    OD              reduce using rule 3 (stmt_list -> stmt .)
    END             reduce using rule 3 (stmt_list -> stmt .)


state 6

    (27) if_stmt -> IF . expr THEN stmt_list ELSE stmt_list FI
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . term CONCAT fact
    (15) term -> . fact
    (16) fact -> . LPAREN expr RPAREN
    (17) fact -> . NUMBER
    (18) fact -> . IDENT
    (19) fact -> . list
    (20) fact -> . func_call
    (21) fact -> . prop_func_call
    (22) fact -> . proc
    (24) fact -> . property
    (36) list -> . LBRACKET sequence RBRACKET
    (37) list -> . LBRACKET RBRACKET
    (42) func_call -> . IDENT LPAREN RPAREN
    (43) func_call -> . IDENT LPAREN expr_list RPAREN
    (44) prop_func_call -> . property LPAREN expr_list RPAREN
    (45) prop_func_call -> . property LPAREN RPAREN
    (28) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (29) proc -> . PROC LPAREN RPAREN stmt_list END
    (25) property -> . PROP

    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 12
    IDENT           shift and go to state 17
    LBRACKET        shift and go to state 13
    PROC            shift and go to state 24
    PROP            shift and go to state 22

    func_call                      shift and go to state 16
    term                           shift and go to state 19
    prop_func_call                 shift and go to state 14
    expr                           shift and go to state 28
    list                           shift and go to state 21
    property                       shift and go to state 23
    proc                           shift and go to state 15
    fact                           shift and go to state 25

state 7

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 8

    (6) stmt -> if_stmt .

    SEMICOLON       reduce using rule 6 (stmt -> if_stmt .)
    END             reduce using rule 6 (stmt -> if_stmt .)
    FI              reduce using rule 6 (stmt -> if_stmt .)
    OD              reduce using rule 6 (stmt -> if_stmt .)
    ELSE            reduce using rule 6 (stmt -> if_stmt .)
    $end            reduce using rule 6 (stmt -> if_stmt .)


state 9

    (5) stmt -> while_stmt .

    SEMICOLON       reduce using rule 5 (stmt -> while_stmt .)
    END             reduce using rule 5 (stmt -> while_stmt .)
    FI              reduce using rule 5 (stmt -> while_stmt .)
    OD              reduce using rule 5 (stmt -> while_stmt .)
    ELSE            reduce using rule 5 (stmt -> while_stmt .)
    $end            reduce using rule 5 (stmt -> while_stmt .)


state 10

    (7) stmt -> class_stmt .

    SEMICOLON       reduce using rule 7 (stmt -> class_stmt .)
    END             reduce using rule 7 (stmt -> class_stmt .)
    FI              reduce using rule 7 (stmt -> class_stmt .)
    OD              reduce using rule 7 (stmt -> class_stmt .)
    ELSE            reduce using rule 7 (stmt -> class_stmt .)
    $end            reduce using rule 7 (stmt -> class_stmt .)


state 11

    (30) class_stmt -> CLASSSYM . IDENT LPAREN param_list RPAREN stmt_list END
    (31) class_stmt -> CLASSSYM . IDENT LPAREN param_list RPAREN SUPER IDENT stmt_list END
    (32) class_stmt -> CLASSSYM . IDENT LPAREN RPAREN stmt_list END SEMICOLON END
    (33) class_stmt -> CLASSSYM . IDENT LPAREN RPAREN SUPER IDENT stmt_list END SEMICOLON END

    IDENT           shift and go to state 29


state 12

    (17) fact -> NUMBER .

    TIMES           reduce using rule 17 (fact -> NUMBER .)
    CONCAT          reduce using rule 17 (fact -> NUMBER .)
    RPAREN          reduce using rule 17 (fact -> NUMBER .)
    PLUS            reduce using rule 17 (fact -> NUMBER .)
    MINUS           reduce using rule 17 (fact -> NUMBER .)
    COMMA           reduce using rule 17 (fact -> NUMBER .)
    THEN            reduce using rule 17 (fact -> NUMBER .)
    DO              reduce using rule 17 (fact -> NUMBER .)
    SEMICOLON       reduce using rule 17 (fact -> NUMBER .)
    $end            reduce using rule 17 (fact -> NUMBER .)
    OD              reduce using rule 17 (fact -> NUMBER .)
    ELSE            reduce using rule 17 (fact -> NUMBER .)
    END             reduce using rule 17 (fact -> NUMBER .)
    FI              reduce using rule 17 (fact -> NUMBER .)


state 13

    (36) list -> LBRACKET . sequence RBRACKET
    (37) list -> LBRACKET . RBRACKET
    (38) sequence -> . listelement COMMA sequence
    (39) sequence -> . listelement
    (40) listelement -> . list
    (41) listelement -> . NUMBER
    (36) list -> . LBRACKET sequence RBRACKET
    (37) list -> . LBRACKET RBRACKET

    RBRACKET        shift and go to state 33
    NUMBER          shift and go to state 32
    LBRACKET        shift and go to state 13

    listelement                    shift and go to state 34
    list                           shift and go to state 31
    sequence                       shift and go to state 30

state 14

    (21) fact -> prop_func_call .

    TIMES           reduce using rule 21 (fact -> prop_func_call .)
    CONCAT          reduce using rule 21 (fact -> prop_func_call .)
    RPAREN          reduce using rule 21 (fact -> prop_func_call .)
    PLUS            reduce using rule 21 (fact -> prop_func_call .)
    MINUS           reduce using rule 21 (fact -> prop_func_call .)
    COMMA           reduce using rule 21 (fact -> prop_func_call .)
    THEN            reduce using rule 21 (fact -> prop_func_call .)
    DO              reduce using rule 21 (fact -> prop_func_call .)
    SEMICOLON       reduce using rule 21 (fact -> prop_func_call .)
    $end            reduce using rule 21 (fact -> prop_func_call .)
    OD              reduce using rule 21 (fact -> prop_func_call .)
    ELSE            reduce using rule 21 (fact -> prop_func_call .)
    END             reduce using rule 21 (fact -> prop_func_call .)
    FI              reduce using rule 21 (fact -> prop_func_call .)


state 15

    (22) fact -> proc .

    TIMES           reduce using rule 22 (fact -> proc .)
    CONCAT          reduce using rule 22 (fact -> proc .)
    RPAREN          reduce using rule 22 (fact -> proc .)
    PLUS            reduce using rule 22 (fact -> proc .)
    MINUS           reduce using rule 22 (fact -> proc .)
    COMMA           reduce using rule 22 (fact -> proc .)
    THEN            reduce using rule 22 (fact -> proc .)
    DO              reduce using rule 22 (fact -> proc .)
    SEMICOLON       reduce using rule 22 (fact -> proc .)
    $end            reduce using rule 22 (fact -> proc .)
    OD              reduce using rule 22 (fact -> proc .)
    ELSE            reduce using rule 22 (fact -> proc .)
    END             reduce using rule 22 (fact -> proc .)
    FI              reduce using rule 22 (fact -> proc .)


state 16

    (20) fact -> func_call .

    TIMES           reduce using rule 20 (fact -> func_call .)
    CONCAT          reduce using rule 20 (fact -> func_call .)
    RPAREN          reduce using rule 20 (fact -> func_call .)
    PLUS            reduce using rule 20 (fact -> func_call .)
    MINUS           reduce using rule 20 (fact -> func_call .)
    COMMA           reduce using rule 20 (fact -> func_call .)
    THEN            reduce using rule 20 (fact -> func_call .)
    DO              reduce using rule 20 (fact -> func_call .)
    SEMICOLON       reduce using rule 20 (fact -> func_call .)
    $end            reduce using rule 20 (fact -> func_call .)
    OD              reduce using rule 20 (fact -> func_call .)
    ELSE            reduce using rule 20 (fact -> func_call .)
    END             reduce using rule 20 (fact -> func_call .)
    FI              reduce using rule 20 (fact -> func_call .)


state 17

    (18) fact -> IDENT .
    (42) func_call -> IDENT . LPAREN RPAREN
    (43) func_call -> IDENT . LPAREN expr_list RPAREN

    TIMES           reduce using rule 18 (fact -> IDENT .)
    CONCAT          reduce using rule 18 (fact -> IDENT .)
    RPAREN          reduce using rule 18 (fact -> IDENT .)
    PLUS            reduce using rule 18 (fact -> IDENT .)
    MINUS           reduce using rule 18 (fact -> IDENT .)
    COMMA           reduce using rule 18 (fact -> IDENT .)
    THEN            reduce using rule 18 (fact -> IDENT .)
    DO              reduce using rule 18 (fact -> IDENT .)
    SEMICOLON       reduce using rule 18 (fact -> IDENT .)
    $end            reduce using rule 18 (fact -> IDENT .)
    OD              reduce using rule 18 (fact -> IDENT .)
    ELSE            reduce using rule 18 (fact -> IDENT .)
    END             reduce using rule 18 (fact -> IDENT .)
    FI              reduce using rule 18 (fact -> IDENT .)
    LPAREN          shift and go to state 35


state 18

    (16) fact -> LPAREN . expr RPAREN
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . term CONCAT fact
    (15) term -> . fact
    (16) fact -> . LPAREN expr RPAREN
    (17) fact -> . NUMBER
    (18) fact -> . IDENT
    (19) fact -> . list
    (20) fact -> . func_call
    (21) fact -> . prop_func_call
    (22) fact -> . proc
    (24) fact -> . property
    (36) list -> . LBRACKET sequence RBRACKET
    (37) list -> . LBRACKET RBRACKET
    (42) func_call -> . IDENT LPAREN RPAREN
    (43) func_call -> . IDENT LPAREN expr_list RPAREN
    (44) prop_func_call -> . property LPAREN expr_list RPAREN
    (45) prop_func_call -> . property LPAREN RPAREN
    (28) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (29) proc -> . PROC LPAREN RPAREN stmt_list END
    (25) property -> . PROP

    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 12
    IDENT           shift and go to state 17
    LBRACKET        shift and go to state 13
    PROC            shift and go to state 24
    PROP            shift and go to state 22

    func_call                      shift and go to state 16
    prop_func_call                 shift and go to state 14
    term                           shift and go to state 19
    expr                           shift and go to state 36
    list                           shift and go to state 21
    property                       shift and go to state 23
    proc                           shift and go to state 15
    fact                           shift and go to state 25

state 19

    (12) expr -> term .
    (13) term -> term . TIMES fact
    (14) term -> term . CONCAT fact

    THEN            reduce using rule 12 (expr -> term .)
    PLUS            reduce using rule 12 (expr -> term .)
    MINUS           reduce using rule 12 (expr -> term .)
    RPAREN          reduce using rule 12 (expr -> term .)
    COMMA           reduce using rule 12 (expr -> term .)
    SEMICOLON       reduce using rule 12 (expr -> term .)
    $end            reduce using rule 12 (expr -> term .)
    OD              reduce using rule 12 (expr -> term .)
    ELSE            reduce using rule 12 (expr -> term .)
    END             reduce using rule 12 (expr -> term .)
    FI              reduce using rule 12 (expr -> term .)
    DO              reduce using rule 12 (expr -> term .)
    TIMES           shift and go to state 38
    CONCAT          shift and go to state 37


state 20

    (26) while_stmt -> WHILE expr . DO stmt_list OD
    (8) expr -> expr . PLUS term
    (9) expr -> expr . MINUS term

    DO              shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 21

    (19) fact -> list .

    TIMES           reduce using rule 19 (fact -> list .)
    CONCAT          reduce using rule 19 (fact -> list .)
    RPAREN          reduce using rule 19 (fact -> list .)
    PLUS            reduce using rule 19 (fact -> list .)
    MINUS           reduce using rule 19 (fact -> list .)
    COMMA           reduce using rule 19 (fact -> list .)
    THEN            reduce using rule 19 (fact -> list .)
    DO              reduce using rule 19 (fact -> list .)
    SEMICOLON       reduce using rule 19 (fact -> list .)
    $end            reduce using rule 19 (fact -> list .)
    OD              reduce using rule 19 (fact -> list .)
    ELSE            reduce using rule 19 (fact -> list .)
    END             reduce using rule 19 (fact -> list .)
    FI              reduce using rule 19 (fact -> list .)


state 22

    (25) property -> PROP .

    LPAREN          reduce using rule 25 (property -> PROP .)
    TIMES           reduce using rule 25 (property -> PROP .)
    CONCAT          reduce using rule 25 (property -> PROP .)
    PLUS            reduce using rule 25 (property -> PROP .)
    MINUS           reduce using rule 25 (property -> PROP .)
    SEMICOLON       reduce using rule 25 (property -> PROP .)
    $end            reduce using rule 25 (property -> PROP .)
    OD              reduce using rule 25 (property -> PROP .)
    ELSE            reduce using rule 25 (property -> PROP .)
    END             reduce using rule 25 (property -> PROP .)
    FI              reduce using rule 25 (property -> PROP .)
    DO              reduce using rule 25 (property -> PROP .)
    COMMA           reduce using rule 25 (property -> PROP .)
    RPAREN          reduce using rule 25 (property -> PROP .)
    THEN            reduce using rule 25 (property -> PROP .)


state 23

    (24) fact -> property .
    (44) prop_func_call -> property . LPAREN expr_list RPAREN
    (45) prop_func_call -> property . LPAREN RPAREN

    TIMES           reduce using rule 24 (fact -> property .)
    CONCAT          reduce using rule 24 (fact -> property .)
    RPAREN          reduce using rule 24 (fact -> property .)
    PLUS            reduce using rule 24 (fact -> property .)
    MINUS           reduce using rule 24 (fact -> property .)
    COMMA           reduce using rule 24 (fact -> property .)
    THEN            reduce using rule 24 (fact -> property .)
    DO              reduce using rule 24 (fact -> property .)
    SEMICOLON       reduce using rule 24 (fact -> property .)
    $end            reduce using rule 24 (fact -> property .)
    OD              reduce using rule 24 (fact -> property .)
    ELSE            reduce using rule 24 (fact -> property .)
    END             reduce using rule 24 (fact -> property .)
    FI              reduce using rule 24 (fact -> property .)
    LPAREN          shift and go to state 42


state 24

    (28) proc -> PROC . LPAREN param_list RPAREN stmt_list END
    (29) proc -> PROC . LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 43


state 25

    (15) term -> fact .

    TIMES           reduce using rule 15 (term -> fact .)
    CONCAT          reduce using rule 15 (term -> fact .)
    PLUS            reduce using rule 15 (term -> fact .)
    MINUS           reduce using rule 15 (term -> fact .)
    SEMICOLON       reduce using rule 15 (term -> fact .)
    $end            reduce using rule 15 (term -> fact .)
    OD              reduce using rule 15 (term -> fact .)
    ELSE            reduce using rule 15 (term -> fact .)
    END             reduce using rule 15 (term -> fact .)
    FI              reduce using rule 15 (term -> fact .)
    THEN            reduce using rule 15 (term -> fact .)
    COMMA           reduce using rule 15 (term -> fact .)
    RPAREN          reduce using rule 15 (term -> fact .)
    DO              reduce using rule 15 (term -> fact .)


state 26

    (23) assign_stmt -> IDENT ASSIGNOP . expr
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . term CONCAT fact
    (15) term -> . fact
    (16) fact -> . LPAREN expr RPAREN
    (17) fact -> . NUMBER
    (18) fact -> . IDENT
    (19) fact -> . list
    (20) fact -> . func_call
    (21) fact -> . prop_func_call
    (22) fact -> . proc
    (24) fact -> . property
    (36) list -> . LBRACKET sequence RBRACKET
    (37) list -> . LBRACKET RBRACKET
    (42) func_call -> . IDENT LPAREN RPAREN
    (43) func_call -> . IDENT LPAREN expr_list RPAREN
    (44) prop_func_call -> . property LPAREN expr_list RPAREN
    (45) prop_func_call -> . property LPAREN RPAREN
    (28) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (29) proc -> . PROC LPAREN RPAREN stmt_list END
    (25) property -> . PROP

    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 12
    IDENT           shift and go to state 17
    LBRACKET        shift and go to state 13
    PROC            shift and go to state 24
    PROP            shift and go to state 22

    func_call                      shift and go to state 16
    prop_func_call                 shift and go to state 14
    term                           shift and go to state 19
    expr                           shift and go to state 44
    list                           shift and go to state 21
    property                       shift and go to state 23
    proc                           shift and go to state 15
    fact                           shift and go to state 25

state 27
